--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,11 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "platform": {
+            "php": "8.0.2"
+        },
+        "sort-packages": true,
+        "platform-check": false
     },
     "minimum-stability": "dev",
     "prefer-stable": true
