--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.0",
         "barryvdh/laravel-dompdf": "^2.0",
+        "doctrine/dbal": "^3.8",
         "dompdf/dompdf": "*",
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
@@ -15,7 +16,8 @@
         "laravel/sanctum": "2.14",
         "laravel/tinker": "^2.7",
         "laravel/ui": "3.4",
-        "livewire/livewire": "^2.12"
+        "livewire/livewire": "^2.12",
+        "revolution/laravel-google-sheets": "^6.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
